--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    
+    position: relative;
 }
 .logo{
     width: 200px;
